--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,10 +13,18 @@ body {
 main {
   flex: 1;
 }
+
+.btn-primary {
+  background-color: #f0c040;
+}
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.rating span {
+  color: #ffc000;
 }
 .product {
   border: 1px #404040 solid;
